# cws-helpers

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  test_youtube_helper.py
docs/: How_to_add_a_new_helper.md  How_to_update_an_existing_helper.md  Logger_Docs.md  OpenAI_Helper_Plan.md  Testing_Guide.md  poetry_guide.md
examples/: README.md  context_logging_example.py  run_context_examples.sh  youtube_caption_demo.py
examples/openai_helper/: structured_completion_example.py  structured_completion_streaming_example.py
scripts/: README.md  release.sh
src/cws_helpers/: __init__.py
src/cws_helpers/anthropic_helper/: README.md  __init__.py  anthropic_helper.py
src/cws_helpers/aws_helper/: README.md  __init__.py  aws_helper.py
src/cws_helpers/aws_helper/errors/: aws_errors.py
src/cws_helpers/google_helper/: README.md  __init__.py  google_helper.py
src/cws_helpers/logger/: README.md  __init__.py  logger.py
src/cws_helpers/openai_helper/: README.md  __init__.py  openai_helper.py
src/cws_helpers/openai_helper/archive/: openai_helper.py
src/cws_helpers/powerpath_helper/: README.md  __init__.py
src/cws_helpers/youtube_helper/: README.md  __init__.py  youtube_helper.py
tests/: conftest.py
tests/anthropic_helper/: test_anthropic_helper.py
tests/aws_helper/: __init__.py  test_aws_errors.py  test_aws_helper.py  test_s3_config.py
tests/google_helper/: __init__.py  test_google_helper.py  test_google_helper_additional.py  test_google_helper_error_handling.py
tests/logger/: test_logger.py
tests/openai_helper/: test_ai_models.py  test_live_integration.py  test_openai_helper.py  test_structured_outputs.py  test_token_params.py
tests/powerpath_helper/: test_assessment_model.py  test_content_models.py  test_course_model.py  test_courses_api.py  test_curriculum_models.py  test_enrollment_models.py  test_goal_model.py  test_goals_api.py  test_item_associations_api.py  test_items_api.py  test_module_associations_api.py  test_module_item_models.py  test_modules_api.py  test_progress_api.py  test_question_banks_api.py  test_questions_api.py  test_responses_api.py  test_result_model.py  test_results_api.py  test_sql_api.py  test_user_model.py  test_users_api.py  test_xp_api.py  test_xp_model.py
tests/youtube_helper/: test_youtube_helper.py  test_youtube_helper_additional.py  test_youtube_helper_captions.py
(+58 files in other folders)
