[tool.poetry]
name = "cws-helpers"
version = "0.3.0"
description = "Collection of helper utilities for personal projects"
authors = ["Casey Schmid <caseywschmid@gmail.com>"]
readme = "README.md"
packages = [{include = "cws_helpers", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.1"
pydantic = "^2.10.6"
openai = "1.65.5"
boto3 = "^1.34.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
moto = "5.1.1"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# Add the src directory to the Python path
pythonpath = ["src"]
# Test file pattern
testpaths = ["tests"]
# Verbose output
addopts = "-v"
